As of 4pm thursday 5/20/2021.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,7 +29,12 @@
 .color-green a:active{
     color: #5dbb46;
 }
-
+.card-500{
+    width: 500px;
+}
+.form-450{
+    width: 450px;
+}
 .error-card{
     width: 400px;
     display: block;
