--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,14 +5,52 @@
     <meta  http-equiv="Content-Type" content="text/html" charset="UTF-8">
     <title>Ndx Validate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-</head>
 
+</head>
+<style type="text/css">
+    .bg-blue{
+        background-color: #002855;
+        color: #FFFFFF;
+    }
+    .nav-bottom-green{
+        border-bottom: #5dbb46 solid 10px;
+    }
+
+    .ndx-header{
+        border-radius: 0;
+    }
+
+    .ndx-btn-color{
+        background-color: #002855;
+        color: #5dbb46;
+    }
+
+    .ndx-btn-color a,
+    .ndx-btn-color a:hover,
+    .ndx-btn-color a:active,
+    .ndx-btn-color a:visited{
+        color: #5dbb46;
+    }
+
+    .color-green,
+    .color-green a,
+    .color-green a:hover,
+    .color-green a:visited,
+    .color-green a:active{
+        color: #5dbb46;
+    }
+
+    .error-card{
+        width: 400px;
+        display: block;
+        margin: auto;
+    }
+</style>
 <body>
 <div class="wrapper">
     <nav class="navbar navbar-expand-lg navbar-dark bg-blue nav-bottom-green">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">CAVE </a>
+            <a class="navbar-brand" href="/">CAVE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,45 +78,40 @@
         </div>
     </nav>
 </div>
+<div class="error-template mt-5 ">
+     <div class="card error-card bg-white">
+         <div class="card-header text-center ndx-header bg-blue nav-bottom-green p-3">
+             <h4> CAVE Login</h4>
+         </div>
+         <div class="card-body">
 
-<div class="container">
-    <section class="mt-5">
-        <div class="card bg-white">
-            <div class="card-header nav-bottom-green bg-blue ndx-header">
-                <h4 class="text-center"> My Completed Requests</span>  </h4>
-            </div>
-        </div>
-        <div class="container">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Date</th>
-                    <th scope="col">Requested By</th>
-                    <th scope="col">Processed By</th>
-                    <th scope="col">Doctor #</th>
-                    <th scope="col">Customer #</th>
+             <form  th:action="@{/login}"   method="post" >
 
-                    <th scope="col">View Details</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="s : ${processed}">
-                    <td th:text="${#dates.format(s.timeStamp, 'yyyy/MM/dd : hh:mm a')}"></td>
-                    <td th:text="${s.accountRequest.mtUserName}"></td>
-                    <td th:text="${s.procBy}"></td>
-                    <td th:text="${s.newDocId}"></td>
-                    <td th:text="${s.newCusId}"></td>
-                    <td><h4 class="text-center color-green"><a href="/dashboard/view_request_processed.html" th:href="@{/view/request/info/{id}(id=${s.accountRequest.accId})}" ><i class="fas fa-eye"></i></a></h4></td>
-                </tr>
-                </tbody>
-            </table>
+                 <fieldset>
+                     <div th:if="${param.error}" class="alert text-danger alert-error">
+                         <p class="text-danger p-2"> Invalid username and password</p>
+                     </div>
+                     <div th:if="${param.logout}" class="alert alert-success">
+                         <p class="text-success">You have been Logged out or Session end</p>
+                     </div>
 
+                     <div class="mb-3">
+                         <label for="username" class="form-label">User Name</label>
+                         <input type="text" id="username" name="username" class="form-control" required />
+                     </div>
+                     <div class="mb-3">
+                         <label for="password" class="form-label">Password</label>
+                         <input type="password"  name="password" id="password" class="form-control"  required />
+                     </div>
+                     <div class="text-center mt-1">
+                         <button type="submit" class="ndx-btn-color btn"  > Log in </button>
+                     </div>
+                 </fieldset>
 
-        </div>
-    </section>
+             </form>
+         </div>
+     </div>
 </div>
-
-
 </body>
 <footer >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
