--- a/src/main/resources/templates/processed_requests.html
+++ b/src/main/resources/templates/processed_requests.html
@@ -12,11 +12,11 @@
 <div class="wrapper">
     <nav class="navbar navbar-expand-lg navbar-dark bg-blue nav-bottom-green">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Ndx Validate</a>
+            <a class="navbar-brand" href="/">CAVE </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a href="/dashboard" class="nav-link">Dashboard</a>
@@ -31,7 +31,9 @@
                         <a href="/processed/requests/complete" class="nav-link">Request Archive</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/logout" class="nav-link">Sign Out</a>
+                        <form th:action="@{/logout}" method="post">
+                            <input type="submit" class="btn ndx-btn-color" value="Sign Out">
+                        </form>
                     </li>
                 </ul>
             </div>
@@ -55,8 +57,6 @@
                     <th scope="col">Processed By</th>
                     <th scope="col">Doctor #</th>
                     <th scope="col">Customer #</th>
-                    <th scope="col">Existing Doctor # </th>
-                    <th scope="col">Existing Customer #</th>
                     <th scope="col">View Details</th>
                 </tr>
                 </thead>
@@ -67,8 +67,8 @@
                     <td th:text="${s.procBy}"></td>
                     <td th:text="${s.newDocId}"></td>
                     <td th:text="${s.newCusId}"></td>
-                    <td th:text="${s.EDocId}"></td>
-                    <td><h4 class="text-center color-green"><a href="/dashboard/edit_request.html" th:href="@{/edit_request/{id}(id=${s.accountRequest.accId})}" ><i class="fas fa-eye"></i></a></h4></td>
+
+                    <td><h4 class="text-center color-green"><a href="/dashboard/view_request_processed.html" th:href="@{/view/request/info/{id}(id=${s.accountRequest.accId})}" ><i class="fas fa-eye"></i></a></h4></td>
                 </tr>
                 </tbody>
             </table>
