Got the dashboard working along with several more data checks.  Also renamed misspelled names.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -64,3 +64,11 @@
 {
     text-align: center!important;
 }
+textarea {
+    height: 38px;
+}
+
+.card-header.mb-3.ndx-header.bg-blue.nav-bottom-green {
+    background: #002855;
+    border-bottom: #5dbb46 solid 10px;
+}
