--- a/src/main/resources/templates/edit_request.html
+++ b/src/main/resources/templates/edit_request.html
@@ -126,15 +126,15 @@
                     <input type="text" class="form-control"   id="phone" th:value="${accRequest.phone}">
                 </div>
 
-                <label for="licenceNo">Doctor Licence Number</label>
+                <label for="licenseNo">Doctor License Number</label>
                 <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="licenceNo" th:value="${accRequest.licenceNo}">
+                    <input type="text" class="form-control"   id="licenseNo" th:value="${accRequest.licenseNo}">
                 </div>
 
 
-                <label for="nip">NPI Number</label>
+                <label for="npi">NPI Number</label>
                 <div class="input-group mb-4">
-                    <input type="text" class="form-control"   id="nip" th:value="${accRequest.npi}">
+                    <input type="text" class="form-control"   id="npi" th:value="${accRequest.npi}">
                 </div>
 
                 <label for="labNote">Add Note</label>
@@ -188,8 +188,8 @@
                     lname: $("#lName").val(),
                     email: $("#email").val(),
                     phone: $("#phone").val(),
-                    licenceNo: $("#licenceNo").val(),
-                    npi: $("#nip").val(),
+                    licencsNo: $("#licenseNo").val(),
+                    npi: $("#npi").val(),
                     notes: $("#notes").val()
 
 
