--- a/src/main/resources/templates/process.html
+++ b/src/main/resources/templates/process.html
@@ -127,7 +127,7 @@
                     </tr>
                     <tr>
                         <td> License #</td>
-                        <td th:text="${accountRequest.licenceNo}"></td>
+                        <td th:text="${accountRequest.licenseNo}"></td>
                     </tr>
                     <tr>
                         <td>NPI #</td>
