--- a/src/main/resources/templates/check_request.html
+++ b/src/main/resources/templates/check_request.html
@@ -143,7 +143,7 @@
                         <td th:text="${e.warning}"></td>
                         <td th:text="${e.doctorNumber}"></td>
                         <td th:text="${e.firstName + ' ' + e.lastName}"></td>
-                        <td th:text="${e.licenceNumber}"></td>
+                        <td th:text="${e.licenseNumber}"></td>
                         <td th:text="${e.NPINumber}"></td>
                         <td th:text="${e.CreatedBy()}"></td>
                         <td th:text="${e.CreatedOn()}"></td>
@@ -243,7 +243,7 @@
 <footer >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/2effb491bc.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/main.js"></script>
     <script type="text/javascript">
         const contextpath = /*[[@{/}]]*/ "/";
