--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -57,6 +57,7 @@
                 <table class="table">
                     <thead>
                     <tr>
+                        <th scope="col">User</th>
                         <th scope="col">Date</th>
                         <th scope="col">Lab Name</th>
                         <th scope="col">Mode</th>
@@ -64,13 +65,14 @@
                         <th scope="col">Practice Name </th>
                         <th scope="col">State</th>
                         <th scope="col">NPI No</th>
-                        <th scope="col">Licence No</th>
+                        <th scope="col">License No</th>
                         <th scope="col">Status</th>
                         <th scope="col">Edit</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="s : ${requests}">
+                        <td th:text="${s.mtUserName}"></td>
                         <td th:text="${#dates.format(s.timeStamp, 'yyyy/MM/dd : hh:mm a')}"></td>
                         <td th:text="${s.labName}"></td>
                         <td th:text="${s.mode}"></td>
@@ -78,7 +80,7 @@
                         <td th:text="${s.PName}"></td>
                         <td th:text="${s.state}"></td>
                         <td th:text="${s.npi}"></td>
-                        <td th:text="${s.licenceNo}"></td>
+                        <td th:text="${s.licenseNo}"></td>
                         <td > <span th:if="${s.status == 0}">Processing</span> </td>
                         <td><h4 class="text-center color-green"><a href="/dashboard/edit_request.html" th:href="@{/edit_request/{id}(id=${s.accId})}" ><i class="far fa-edit"></i></a></h4></td>
                     </tr>
@@ -105,7 +107,7 @@
 <footer >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/2effb491bc.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/main.js"></script>
 </footer>
 </html>
